2014-07-29  Khaled Hosny  <khaledhosny@eglug.org>

	* spc_pdfm.c: remove the #ifdef ENABLE_TOUNICODE as it is always true.
	* spc_pdfm.c: rename my_parse_pdf_dict to
	parse_pdf_dict_with_tounicode.

	* dvipdfmx.c, dvi.c: Always accept .xdv file extension.
	* dvipdfmx.c: Remove some unnecessary is_xetex checks.
	* dvipdfmx.c: Allow DVIPDFM emulation mode even with xdvipdfmx, there
	is no much gain from not doing so.
	* pdfnames.c: Remove wrong is_xetex check.

	* dvi.c, dvipdfmx.c, dvipdfmx.h, spc_pdfm.c: Rename is_xetex to is_xdv
	and set it to 1 when DVI id equals XDV_ID.

	* pdfdev.c (pdf_dev_locate_font): Don't crash if mrec is None.
	* dvipdfm.test, xdvipdfm.test, tests/xbmc10.{dvi,tex}, Makefile.am:
	Test the above bug.


2014-07-28  Jiang Jiang  <gzjjgod@gmail.com>

	* dpxfile.c (qcheck_filetype): Skip opening non-existent file.

	* tt_cmap.c (lookup_cmap12): Fix a compiler warning when trying to
	  compare unsigned value with 0.

2014-07-28  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* type0.c (Type0Font_*_ToUnicode_stream): Declare once as static
	(once again!).

2014-07-28  Khaled Hosny  <khaledhosny@eglug.org>

	* dvi.c (do_pic_file): Don't insert the pic file while skimming
	reflected segments.

	* tt_cmap.c (handle_subst_glyphs): Don't try to added invalid CMap
	entries (regression from r34718).

	* cff.c, cff.h: Add cff_get_glyphname convenience function.
	* tt_cmap.c (sfnt_get_glyphname): Support getting glyph names from
	OpenType/CFF fonts (regression from r34718).

2014-07-28  Jiang Jiang  <gzjjgod@gmail.com>

	* cid.c, pdfdev.c: Correct release of retained cff_charsets.

2014-07-27  Jiang Jiang  <gzjjgod@gmail.com>

	* cff.c, cff.h, cid.c, cid_p.h, cidtype0.c, fontmap.c, fontmap.h,
	pdfdev.c: Fix CID-keyed fonts glyph lookup with XeTeX.

	* pdfdev.c, pdffont.c, pdffont.h, tt_cmap.c, type0.c, type0.h: Fix
	reverse CMap lookup for ToUnicode map generation.

	* cff.c: Avoid read past 65536 glyphs.

2014-07-26  Peter Breitenlohner  <peb@mppmu.mpg.de>
